# plagdef

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  __init__.py  cli.py  model.py  plagdef.py  pyproject.toml  repository.py  settings.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: cd.yml  python-app.yml  test.yml
data/docs/: s1-lex.txt  s1-sem.txt  s2-lex.txt  s3-lex.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
plagdef/: algorithm.py  app.py  bootstrap.py  cli.py  config.py  gui.py  gui_app.py  measure.py  model.py  repositories.py  repository.py  services.py  stats.py  util.py
plagdef/config/: alg.ini  app.ini  logging.ini
plagdef/data/docs/: s2-sem.txt  s2.txt  s3-sem.txt  s3-syn.txt
plagdef/data/docs_250/: 12-s3.txt  19-s1-syn.txt  8-s2-syn.txt  s1.txt
plagdef/gui/: controllers.py  main.py  model.py  resources.py  views.py
plagdef/gui/res/: compile_resources.bat  resources.qrc
plagdef/gui/ui/: configure_widget.ui  error_widget.ui  home_widget.ui  loading_widget.ui  main_window.ui  matches_dialog.ui  msg_dialog.ui  no_results_widget.ui  results_widget.ui  settings_dialog.ui
plagdef/model/: detection.py  download.py  extension.py  filtering.py  matching.py  models.py  pairs.py  pairs2013.py  preprocessing.py  reporting.py  seeding.py  stopwords.py  util.py
plagdef/model/legacy/: algorithm.py  extension.py  filtering.py  preprocessing.py  seeding.py  util.py
plagdef/model/pipeline/: doc_translate.py  extension.py  preprocessing.py  seeding.py  translate.py
plagdef/tests/: __init__.py  conftest.py  fakes.py  fixtures.py  test_algorithm.py  test_app.py  test_bootstrap.py  test_cli.py  test_document_file_repository.py  test_document_pair_report_file_repository.py  test_model.py  test_services.py  test_util.py
plagdef/tests/gui/: test_model.py
plagdef/tests/model/: test_detection.py  test_download.py  test_extension.py  test_filtering.py  test_matching.py  test_models.py  test_preprocessing.py  test_reporting.py  test_seeding.py  test_util.py
plagdef/tests/model/legacy/: test_algorithm.py  test_extension.py  test_filtering.py  test_preprocessing.py  test_seeding.py  test_util.py
plagdef/tests/model/pipeline/: test_doc_translate.py  test_extension.py  test_filtering.py  test_preprocessing.py  test_seeding.py  test_translate.py
plagdef/tests/repositories/: test_config_file_repository.py  test_document_file_repository.py  test_document_pair_matches_json_repository.py  test_document_pair_report_file_repository.py  test_document_pickle_repository.py  test_document_serializer.py  test_file_repository.py
plagdef/ui/: controller.py  import_res.bat  main.ui  resources.py  resources.qrc  views.py
tests/: test_plagdef.py
