[tool.poetry]
name = "plagdef"
version = "1.5"
description = "A tool which makes life hard for students who try to make theirs simple."
authors = ["Yannik Queisler"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/devWhyqueue/plagdef"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
exclude = ["*/tests"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beautifulsoup4 = "^4.11"
click = "^8.1"
deep-translator = "^1.9"
fpdf2 = "^2.6"
jsonpickle = "^3.0"
langdetect = "^1.0"
networkx = "^3.0"
numpy = "^1.24"
ocrmypdf = "^14.0"
pdfplumber = "^0.7"
PyPDF2 = "^3.0"
pyside6 = "^6.4"
python-magic = "^0.4"
sortedcontainers = "^2.4"
selenium = "^4.8"
stanza = "^1.4"
tqdm = "^4.64"
urlextract = "^1.8"
webdriver-manager = "^3.8"
Werkzeug = "^2.2"

[tool.poetry.dev-dependencies]
coverage = "^7.1"
flake8 = "^6.0"
pytest = "^7.2"
tox = "^4.4"
tox-gh-actions = "^3.0"

[tool.poetry.scripts]
plagdef = "plagdef.app:cli"
plagdef-gui = "plagdef.app:gui"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310

[gh-actions]
python =
    3.9: py39
    3.10: py310

[testenv:py39]
allowlist_externals = make
commands = make coverage-ci

[testenv:py310]
allowlist_externals = make
commands = make test-ci
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
