[tool.poetry]
name = "plagdef"
version = "1.5.3"
description = "A tool which makes life hard for students who try to make theirs simple."
authors = ["Yannik Queisler"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/devWhyqueue/plagdef"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]
exclude = ["*/tests"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
beautifulsoup4 = "^4.13.4"
click = "^8.2.1"
deep-translator = "^1.11.4"
fpdf2 = "^2.8.3"
jsonpickle = "^4.1.1"
langdetect = "^1.0.9"
networkx = "^3.4.2"
numpy = "^1.26.4"
ocrmypdf = "^16.10.4"
pdfplumber = "^0.11.7"
PyPDF2 = "^3.0.1"
pyside6 = "~6.4"
python-magic = "^0.4.27"
sortedcontainers = "^2.4.0"
selenium = "^4.34.2"
stanza = "~1.9"
torch = "~2.5"
tqdm = "^4.67.1"
urlextract = "^1.9.0"
webdriver-manager = "^4.0.2"
Werkzeug = "^3.1.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.1"
flake8 = "^7.3.0"
pytest = "^8.4.1"
setuptools = "^80.9.0"
tox = "^4.28.3"
tox-gh-actions = "^3.3.0"

[tool.poetry.scripts]
plagdef = "plagdef.app:cli"
plagdef-gui = "plagdef.app:gui"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39, py310

[gh-actions]
python =
    3.10: py310

[testenv:py310]
allowlist_externals = make
commands = make coverage-ci
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
