[metadata]
name = plagdef
version = 0.1.55
license = MIT license
author = Yannik Queisler
author_email = dev.yannik.queisler@gmail.com
description = PlagDef supports plagiarism detection for student assignments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devWhyqueue/plagdef
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
install_requires =
    click ~= 7.0
    lxml ~= 4.6
    more-itertools ~= 8.7
    nltk ~= 3.5
    numpy ~= 1.20
    pyside6 ~= 6.0
    somajo ~= 2.1
    spacy ~= 3.0


[options.package_data]
plagdef =
    config/alg.ini
    gui/ui/*
    gui/res/*

[options.packages.find]
exclude = *tests*

[options.entry_points]
console_scripts =
    plagdef = plagdef.app:cli
    plagdef-gui = plagdef.app:gui

