[metadata]
name = plagdef
version = 0.3.7
license = MIT license
author = Yannik Queisler
author_email = dev.yannik.queisler@gmail.com
description = PlagDef supports plagiarism detection for student assignments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devWhyqueue/plagdef
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:
install_requires =
    click ~= 7.0
    lxml ~= 4.6
    networkx ~= 2.5
    numpy ~= 1.20
    pdfplumber ~= 0.5
    pyside6 ~= 6.0
    python-magic ~= 0.4
    sortedcontainers ~= 2.3
    stanza ~= 1.2
    tqdm ~= 4.60


[options.package_data]
plagdef =
    config/alg.ini
    config/logging.ini
    gui/ui/*
    gui/res/*

[options.packages.find]
exclude = *tests*

[options.entry_points]
console_scripts =
    plagdef = plagdef.app:cli
    plagdef-gui = plagdef.app:gui

[tox:tox]
envlist = py37, py38, py39

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv:py37]
whitelist_externals = make
commands =
    make test-ci

[testenv:py38]
whitelist_externals = make
commands =
    make test-ci

[testenv:py39]
whitelist_externals = make
commands =
    make coverage-ci
